[gd_scene load_steps=5 format=3 uid="uid://d2mypbpnfoli3"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_dnpgy"]
[ext_resource type="PackedScene" uid="uid://bi0tkmaccr3b2" path="res://scenes/player.tscn" id="1_qvyuu"]
[ext_resource type="PackedScene" uid="uid://bwtxs76738mu6" path="res://scenes/asteroid_spawner.tscn" id="3_uj2ek"]
[ext_resource type="FontFile" uid="uid://cg40vle635afd" path="res://assets/fonts/PublicPixel-z84yD.ttf" id="4_hpd43"]

[node name="World" type="Node2D"]
script = ExtResource("1_dnpgy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("1_qvyuu")]
position = Vector2(640, 360)

[node name="AsteroidSpawner" parent="." instance=ExtResource("3_uj2ek")]

[node name="LivesLabel" type="Label" parent="."]
offset_left = 18.0
offset_top = 32.0
offset_right = 102.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("4_hpd43")
theme_override_font_sizes/font_size = 12
text = "LIVES: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointsLabel" type="Label" parent="."]
offset_left = 18.0
offset_top = 9.0
offset_right = 114.0
offset_bottom = 32.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_hpd43")
theme_override_font_sizes/font_size = 12
text = "POINTS: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="bullet_shot" from="Player" to="." method="_on_player_bullet_shot"]
